# arrow-ballista-poc

ballista/client/src/: context.rs
ballista/core/: Cargo.toml
ballista/core/src/: utils.rs
ballista/executor/: Cargo.toml
ballista/scheduler/: Cargo.toml
ballista/scheduler/src/: scheduler_process.rs
delta-poc/: Cargo.toml
delta-poc/src/: main.rs
dev/docker/: ballista-executor.Dockerfile  ballista-scheduler.Dockerfile
