[package]
name = "delta-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
tokio = "1.35.1"
ballista = { path = "/Users/proycroft/source/third_party/arrow-ballista/ballista/client" , features = ["azure"]}
futures = "0.3.30"
rayon = "1.8.1"
object_store = { version = "0.9.0", features = ["azure"] }
url = "2.5.0"
datafusion = "35.0.0"
parquet = "50.0.0"
datafusion_iceberg = "0.1.2"
deltalake = {  version = "0.17.0", features = ["azure", "datafusion"] }
deltalake-azure = "0.1.0"
deltalake-core = { version = "0.17.0", features = ["datafusion"] }
